<resources>
    <string name="app_name">SeaJobNow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">Notification</string>

    <!--Menu String-->
    <string name="menu_home">Home</string>
    <string name="menu_post_job">Post Jobs</string>
    <string name="menu_candidates">Candidates</string>

    <!--Error and Login Text Strings-->
    <string name="text_post_job">Post Job</string>
    <string name="text_posted_job_updates">Posted Job Updates</string>
    <string name="exit_prompt">Please press again to exit</string>
    <string name="powered_by_interlink_consultant"><b>Powered by </b> Interlink Consultant</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="still_not_connected_register">New to SeaJobNow? Sign up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="contact_admin">Please Contact Administrator</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="company_code">Company Code</string>
    <string name="valid_password">Please Enter Valid Password</string>
    <string name="valid_companycode">Please Enter Valid Company Code</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_companycode">Please Enter Company Code</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Are you sure you want to Logout?</string>
    <string name="some_logout_text">If you logout we will not able to show you latest products.</string>
    <string name="retry">Retry</string>

    <!--Registration String-->
    <string name="emailid">Email Address *</string>
    <string name="company_name">Company Name *</string>
    <string name="mobile_number">Mobile Number *</string>
    <string name="contact_name">Contact Person Name *</string>
    <string name="company_address">Company Address *</string>
    <string name="website">Website</string>
    <string name="pincode">Pincode *</string>
    <string name="city_hint">City *</string>
    <string name="state_hint">State *</string>
    <string name="country_hint">Country *</string>
    <string name="position">Position *</string>
    <string name="valid_contact_person">Please Enter Contact Person Name</string>
    <string name="valid_company_name">Please Enter Company Name</string>
    <string name="error_email">Please Enter Email Address</string>
    <string name="valid_email">Please Enter Valid Email Address</string>
    <string name="error_mobile">Please Enter Mobile Number</string>
    <string name="valid_mobile">Please Enter Valid Mobile Number</string>
    <string name="wrong_details">Wrong details</string>
    <string name="valid_address">Please Enter Address</string>
    <string name="valid_pincode">Please Enter Pincode</string>
    <string name="valid_city">Select City</string>
    <string name="valid_state">Select State</string>
    <string name="valid_country">Select Country</string>

    <!--Job Post String-->
    <string name="new_job">New Job Post</string>
    <string name="name">Job Name *</string>
    <string name="rank">Rank *</string>
    <string name="ship">Type of Ship *</string>
    <string name="location">Job Location *</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="department">Department *</string>
    <string name="startDate">Post Start Date *</string>
    <string name="endDate">Job End Date *</string>
    <string name="salary">Salary *</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_details"><u>More Details</u></string>
    <string name="job_desc">Job Description *</string>



    <string name="large_text">"Material is the metaphor.\n\n""A material metaphor is the unifying theory of a
        rationalized space and a system of motion.""The material is grounded in tactile reality,
        inspired by the study of paper and ink, yet ""technologically advanced and open to imagination
        and magic.\n""Surfaces and edges of the material provide visual cues that are grounded in reality.
        The ""use of familiar tactile attributes helps users quickly understand affordances. Yet the ""flexibility of
        the material creates new affordances that supercede those in the physical ""world, without
        breaking the rules of physics.\n""The fundamentals of light, surface, and movement are key to conveying
        how objects move, ""interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n""Bold, graphic, intentional.\n\n""The foundational
        elements of print based design typography, grids, space, scale, color, ""and use of imagery guide visual treatments.
        These elements do far more than please the ""eye. They create hierarchy, meaning, and focus. Deliberate color choices,
        edge to edge ""imagery, large scale typography, and intentional white space create a bold and graphic ""interface that
        immerse the user in the experience.\n""An emphasis on user actions makes core functionality immediately apparent and provides ""waypoints for the user.\n\n""Motion provides meaning.\n\n""Motion respects and reinforces the user as the prime mover. Primary user actions are ""inflection points that initiate motion, transforming the whole design.\n""All action takes place in a single environment. Objects are presented to the user without ""breaking the continuity of experience even as they transform and reorganize.\n""Motion is meaningful and appropriate, serving to focus attention and maintain continuity. ""Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n""3D world.\n\n""The material environment is a 3D space, which means all objects have x, y, and z ""dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the ""positive z-axis extending towards the viewer. Every sheet of material occupies a single ""position along the z-axis and has a standard 1dp thickness.\n""On the web, the z-axis is used for layering and not for perspective. The 3D world is ""emulated by manipulating the y-axis.\n\n""Light and shadow.\n\n""Within the material environment, virtual lights illuminate the scene. Key lights create ""directional shadows, while ambient light creates soft shadows from all angles.\n""Shadows in the material environment are cast by these two light sources. In Android ""development, shadows occur when light sources are blocked by sheets of material at ""various positions along the z-axis. On the web, shadows are depicted by manipulating the ""y-axis only. The following example shows the card with a height of 6dp.\n\n""Resting elevation.\n\n""All material objects, regardless of size, have a resting elevation, or default elevation ""that does not change. If an object changes elevation, it should return to its resting ""elevation as soon as possible.\n\n""Component elevations.\n\n""The resting elevation for a component type is consistent across apps (e.g., FAB elevation ""does not vary from 6dp in one app to 16dp in another app).\n""Components may have different resting elevations across platforms, depending on the depth ""of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n""Responsive elevation and dynamic elevation offsets.\n\n""Some component types have responsive elevation, meaning they change elevation in response ""to user input (e.g., normal, focused, and pressed) or system events. These elevation ""changes are consistently implemented using dynamic elevation offsets.\n""Dynamic elevation offsets are the goal elevation that a component moves towards, relative ""to the component’s resting state. They ensure that elevation changes are consistent ""across actions and component types. For example, all components that lift on press have ""the same elevation change relative to their resting elevation.\n""Once the input event is completed or cancelled, the component will return to its resting ""elevation.\n\n""Avoiding elevation interference.\n\n""Components with responsive elevations may encounter other components as they move between ""their resting elevations and dynamic elevation offsets. Because material cannot pass ""through other material, components avoid interfering with one another any number of ways, ""whether on a per component basis or using the entire app layout.\n""On a component level, components can move or be removed before they cause interference. ""For example, a floating action button (FAB) can disappear or move off screen before a ""user picks up a card, or it can move if a snackbar appears.\n""On the layout level, design your app layout to minimize opportunities for interference. ""For example, position the FAB to one side of stream of a cards so the FAB won’t interfere ""when a user tries to pick up one of cards.\n\n" </string>
    <string name="apply">Apply</string>
</resources>