<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.seajobnow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_post_job"
        android:name="com.example.seajobnow.ui.postjob.PostJobFragment"
        android:label="@string/menu_post_job"
        tools:layout="@layout/fragment_postjob" />

    <fragment
        android:id="@+id/nav_candidates"
        android:name="com.example.seajobnow.ui.candidate.CandidateFragment"
        android:label="@string/menu_candidates"
        tools:layout="@layout/fragment_candidate" />
</navigation>